--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "George <7jagjag@gmail.com>",
   "license": "UNLICENSED",
   "dependencies": {
-    "hapi": "^11.1.1"
+    "hapi": "^11.1.1",
+    "inert": "^3.2.0"
   }
 }
