--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "George <7jagjag@gmail.com>",
   "license": "UNLICENSED",
   "dependencies": {
+    "boom": "^3.0.0",
     "h2o2": "^4.0.2",
     "handlebars": "^4.0.4",
     "hapi": "^11.1.1",
